<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ScrollVIew"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemsToPickLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/orderNumberEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/CustomOrderInput"
                android:hint="@string/order_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingEnd="50dp"/>

            <Button
                android:id="@+id/searchOrderButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/menu_option_button"
                android:text="@string/search_order"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orderNumberEditText"/>

            <TextView
                android:id="@+id/itemsToPick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/items_to_pick"
                app:layout_constraintBottom_toTopOf="@+id/totalPickingItemsList"
                app:layout_constraintEnd_toEndOf="@+id/searchOrderButton"
                app:layout_constraintStart_toStartOf="@+id/searchOrderButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/totalPickingItemsList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="40dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchOrderButton">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/finishPickingButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/menu_option_button"
                android:text="@string/finish"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalPickingItemsList" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>