<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingEnd="30dp"
    android:paddingStart="30dp"
    android:background="@drawable/regular_popup_background"
    >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/information_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterInfoText"
        style="@style/PopupMessageBigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Move Item"
        app:layout_constraintEnd_toEndOf="@+id/icon"
        app:layout_constraintStart_toStartOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <AutoCompleteTextView
        android:id="@+id/fromBinNumber"
        style="@style/CustomScannerInputWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:dropDownHeight="wrap_content"
        android:hint="From Bin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterInfoText" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemNumberSpinnerTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_text_box"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromBinNumber">

        <AutoCompleteTextView
            android:id="@+id/itemNumberSpinner"
            style="@style/DropDownsStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dropDownHeight="wrap_content"
            android:hint="@string/item_number" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/itemAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_white_backgroung"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/amount_to_move"
        app:layout_constraintEnd_toEndOf="@+id/itemNumberSpinnerTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/itemNumberSpinnerTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/itemNumberSpinnerTextInputLayout" />




    <AutoCompleteTextView
        android:id="@+id/toBinNumber"
        style="@style/CustomScannerInputWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/to_bin"
        app:layout_constraintEnd_toEndOf="@+id/itemAmountEditText"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/itemAmountEditText"
        app:layout_constraintTop_toBottomOf="@+id/itemAmountEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        style="@style/PopupButtons"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toBinNumber" />


</androidx.constraintlayout.widget.ConstraintLayout>