<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SetNetworkDetails.NetworkDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/line_gradient">

        <ImageView
            android:id="@+id/CDILogoImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,16:12"
            android:src="@drawable/cdi_logo___without_technologies_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cdi_image_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutIPAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle_text_box"
            android:padding="5dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CDILogoImage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ipAddressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/IP_address_hint"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPortNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle_text_box"
            android:padding="5dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutIPAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/portNumberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:hint="@string/port_number"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/testConnectionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_rectangle"
            android:backgroundTint="@color/CDI_Blue"
            android:text="Test Connection"
            android:textAllCaps="false"
            android:textColor="@color/CDI_Gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPortNumber" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>