<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"

            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:background="@drawable/regular_popup_background"
            >

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/information_icon"/>

                <TextView
                    android:id="@+id/enterInfoText"
                    style="@style/PopupMessageBigText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Move Item"/>

                <AutoCompleteTextView
                    android:id="@+id/fromBinNumber"
                    style="@style/CustomScannerInputWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:dropDownHeight="wrap_content"
                    android:hint="From Bin"
                    app:layout_constraintHorizontal_bias="0.498"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/itemNumberSpinnerTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rectangle_text_box"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="true">

                    <AutoCompleteTextView
                        android:id="@+id/itemNumberSpinner"
                        style="@style/DropDownsStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:dropDownHeight="wrap_content"
                        android:hint="Item" />

                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/itemAmountEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_white_backgroung"
                    android:gravity="center"
                    android:inputType="number"
                    android:hint="@string/amount_to_move"/>

                <AutoCompleteTextView
                    android:id="@+id/toBinNumber"
                    style="@style/CustomScannerInputWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/to_bin"
                    app:layout_constraintEnd_toEndOf="@+id/itemAmountEditText"
                    app:layout_constraintHorizontal_bias="0.502"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addButton"
                    style="@style/PopupButtons"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/add_button"/>

        </LinearLayout>

</ScrollView>
